@@ -5,6 +5,13 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with
 email address.
 
+2008-Mar-31 UPDATE   Dick Hollenbeck <dick@softplc.com>
+================================================================================
++all
+    Tweaked class MsgPanel so that the screen drawing only happens from
+    its OnPaint() function.
+
+
 2008-Mar-30 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
 ================================================================================
 +eeschema
@@ -14,7 +21,6 @@ email address.
 
 +all:
     Added comments in gestfich.cpp to explain the default paths used by kicad to find help files and lib files
-
 
 
 2008-Mar-30 UPDATE  Jonas Diemer <diemer-at-gmx.de>
@@ -50,7 +56,7 @@ email address.
 +eeschema
     Removed an very old bug in onrightclick.cpp which crashes eeschema when
     right clicking in a field inside a component.
-    Old code should never works,	but ...
+    Old code should never works,    but ...
 
 
 2008-Mar-20 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
